# evalrx

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  main.py  pyproject.toml  requirements.md  requirements.txt  transcribe.py
api/: index.py
app/: main.py
config/: eval.toml  speaker_role_overrides.toml
docs/: architecture.md  development.md  operations.md  roadmap.md
prompts/v1/: agent_performance.txt  classification.txt  patient_experience.txt  safety_compliance.txt
src/confido_eval/: __init__.py  analysis.py  build_workbook.mjs  calibration.py  cli.py  compare.py  config.py  jsonl.py  models.py  normalize.py  prompts.py  runner.py  service.py  submission.py  webapp.py  workbook.py
src/confido_eval/static/: index.html
tests/: test_models_and_validation.py  test_normalize.py  test_prompts.py  test_runner_contract.py  test_statistics.py
transcripts/: call_209bf832bf900ff32ece9661d93.json  call_209bf832bf900ff32ece9661d93.txt  call_25a7b90c6d662d008e3acf9560c.json  call_25a7b90c6d662d008e3acf9560c.txt  call_381df7d8fd176fb1231a178aa6e.json  call_381df7d8fd176fb1231a178aa6e.txt  call_5efc2f655ab6f8c59ed98858e32.json  call_5efc2f655ab6f8c59ed98858e32.txt  call_6009c3b5fb87f0b62bb78a22a66.json  call_6009c3b5fb87f0b62bb78a22a66.txt  call_65ce44e043897a7872d74537982.json  call_65ce44e043897a7872d74537982.txt  call_68384b5d912730be8c93fa0f8dc.json  call_68384b5d912730be8c93fa0f8dc.txt  call_6abddfe4c01235ad9c153f8522c.json  call_6abddfe4c01235ad9c153f8522c.txt  call_90cd69877396d73edb22a1ebc12.json  call_90cd69877396d73edb22a1ebc12.txt  call_c8bbec5bd6029b49acd04424a21.json  call_c8bbec5bd6029b49acd04424a21.txt
