[project]
name = "confido-eval"
version = "0.1.0"
description = "Reproducible evaluation pipeline for anonymized healthcare AI calls"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "litellm>=1.87,<2",
    "openpyxl>=3.1,<4",
    "pydantic>=2.11,<3",
    "python-dotenv>=1.2.2",
    "typer>=0.16,<1",
]

[project.scripts]
confido-eval = "confido_eval.cli:app"

[project.optional-dependencies]
api = [
    "fastapi>=0.115,<1",
    "uvicorn>=0.30,<1",
]
transcription = [
    "deepgram-sdk>=5,<6",
]
dev = [
    "pytest>=8.4,<9",
    "pytest-asyncio>=1.1,<2",
    "ruff>=0.12,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/confido_eval"]

[tool.hatch.build.targets.wheel.force-include]
"config/eval.toml" = "confido_eval/assets/config/eval.toml"
"prompts/v1/classification.txt" = "confido_eval/assets/prompts/v1/classification.txt"
"prompts/v1/agent_performance.txt" = "confido_eval/assets/prompts/v1/agent_performance.txt"
"prompts/v1/patient_experience.txt" = "confido_eval/assets/prompts/v1/patient_experience.txt"
"prompts/v1/safety_compliance.txt" = "confido_eval/assets/prompts/v1/safety_compliance.txt"

[tool.hatch.build.targets.sdist]
include = [
    "src/confido_eval",
    "config/eval.toml",
    "docs",
    "prompts/v1/*.txt",
    "README.md",
    "pyproject.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = ["live: opt-in provider smoke tests requiring CONFIDO_LIVE_SMOKE=1"]

[tool.ruff]
line-length = 100
target-version = "py312"
